[package]
name = "rust"
version = "0.1.0"
authors = ["shiliang <921789348@qq.com>"]
edition = "2018"
resolver = "2"
[dependencies]
rand = "0.6.5"
ferris-says = "0.2"
winit = "0.30.7"


[dependencies.gtk]
version = "0.9.5"
package = "gtk4"

[dependencies.windows]
version = "0.58.0"
features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]

