[package]
name = "rust"
version = "0.1.0"
authors = ["shiliang <921789348@qq.com>"]
edition = "2018"
resolver = "2"
[dependencies]
rand = "0.9.2"
ferris-says = "0.3.2"
winit = "0.31.0-beta.2"

gpui = "0.2.2"
gpui-component = "0.5.0"
[dependencies.gtk]
version = "0.10.3"
package = "gtk4"

[dependencies.windows]
version = "0.62.2"
features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]

